added changes for feature branch

--- a/CloudFormationTemplate.yaml
+++ b/CloudFormationTemplate.yaml
@@ -1,6 +1,7 @@
 # Just template for education purpose
 # Fist Steps
 # New commet for remote repo
+# branching version
 ---
 Resources:
   MyInstance:
