commit to the feature branch

--- a/CloudFormationTemplate.yaml
+++ b/CloudFormationTemplate.yaml
@@ -3,6 +3,7 @@
 # New commet for remote repo
 # branching version
 # some more branching features
+# doing merge commits
 ---
 Resources:
   MyInstance:
