Testing pull request template

--- a/CloudFormationTemplate.yaml
+++ b/CloudFormationTemplate.yaml
@@ -1,10 +1,11 @@
 # Just template for education purpose
-# Fist Steps
+# Changes for github pull request template
 # New commet for remote repo
 # branching version
 # some more branching features
 # doing merge commits
 # taggin exercise
+# stashing 
 ---
 Resources:
   MyInstance:
